Add CMake option to use static SDL2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+option(SDL2_STATIC "Static link SDL2" OFF)
+
 add_executable(tetris
 	src/main.c
 	src/game.c
@@ -19,5 +21,8 @@ target_include_directories(tetris PUBLIC "${PROJECT_SOURCE_DIR}/include")
 
 find_package(SDL2 REQUIRED)
 
-target_link_libraries(tetris PRIVATE ${SDL2_LIBRARIES})
-
+if(SDL2_STATIC)
+	target_link_libraries(tetris ${SDL2_STATIC_LIBRARIES})
+else()
+	target_link_libraries(tetris ${SDL2_LIBRARIES})
+endif()
